# PropositionalCalculusToolKit

./: .gitignore  Formula.cabal  TODO.md  formula.cabal  pctk.cabal
src/Data/: Formula.hs
src/Data/Logic/: Prop.hs
tests/: TestFormula.hs
