name:                pctk
version:             0.1.0.0
synopsis:            propositional calculus tool kit
license:             GPL-3
author:              Julian Müller
maintainer:          jul.mue@hotmail.de
copyright:           Julian Müller
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:
        src
    ghc-options:
        -Wall -Werror
    exposed-modules:
        Data.Logic.Prop
    build-depends:
        base,
        containers,
        transformers,
        QuickCheck
    default-language:
        Haskell2010

test-suite test1
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        tests,
        src
    main-is:
        TestFormula.hs
    build-depends:
        base,
        containers,
        data-ordlist,
        tasty >=0.10.1.2,
        tasty-hunit >=0.9.2,
        tasty-smallcheck >=0.8.0.1,
        tasty-quickcheck >=0.8.3.2,
        smallcheck
